# HypnoVibe

./: .gitignore  gradle.properties  release_build.bat  settings.gradle.kts
.trae/rules/: document-storage.md  proxy-compile.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp
app/src/main/java/com/example/nirjon/bledemo4_advertising/util/: BLEUtil.java
app/src/main/java/com/hypno/hypnovibe/app/manager/: BuiltinWaveforms.java  ChannelMappingCoordinator.java  ConfigManager.java  DeviceTypeRegistry.java  KeyframeExpander.java  PlaybackCoordinator.java  PlaylistManager.java  PulseFileParser.java  PulseToFrames.java  TimelineEngine.java  TimelineManager.java
app/src/main/java/com/hypno/hypnovibe/app/viewmodel/: ConfigVM.java  CoyoteTestVM.java  DGLabTestVM.java  DeviceManagerVM.java  LoveSpouseTestVM.java  PlaySessionVM.java  (+1 more)
app/src/main/java/com/hypno/hypnovibe/domain/: AdapterStatus.java  DeviceProtocolAdapter.java  DeviceTypeDescriptor.java
app/src/main/kotlin/com/hypno/hypnovibe/: MainActivity.kt
app/src/main/res/drawable/: candle_glow.xml  gothic_border.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
document/: Phase1_详细设计.md  Phase2_详细设计.md  Phase3_详细设计.md  Phase4_郊狼测试面板_详细设计.md  Phase5_通道体系重构_详细设计.md  功能设计文档.md  开发计划.md  架构设计文档.md  郊狼V3协议使用接口文档.md  郊狼pulse波形文件格式分析.md  郊狼协议差异问题清单.md  郊狼协议移植方案.md  郊狼多设备同联可行性分析.md  郊狼波形集成_可行性分析与实施计划.md  郊狼蓝牙协议认知文档.md  项目规则.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+80 files in other folders)
